Opened 9 years ago
Closed 9 years ago
#6672 closed defect (fixed)
ffplay stereo3d incorrect aspect ratio
| Reported by: | ffplayscale | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avfilter |
| Version: | git-master | Keywords: | stereo3d |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug:
Ffplay displays the same output for the stereo3d options sbsl and sbs2l, while the latter should scale the output 200% horizontally. Ffmpeg correctly performs the scaling, so this bug only affects ffplay. The bug has been reproduced on Windows and seems unrelated to the input video.
How to reproduce:
ffplay started on 2017-09-18 at 12:18:37
Report written to "ffplay-20170918-121837.log"
Command line:
ffplay -report -vf "stereo3d=sbs2l:argg" "movie.mp4"
ffplay version N-87306-g6743351 Copyright (c) 2003-2017 the FFmpeg developers
built with gcc 7.2.0 (GCC)
configuration: --enable-gpl --enable-version3 --enable-cuda --enable-cuvid --enable-d3d11va --enable-dxva2 --enable-libmfx --enable-nvenc --enable-avisynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --enable-libfreetype --enable-libgme --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenh264 --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libsnappy --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxavs --enable-libxvid --enable-libxml2 --enable-libzimg --enable-lzma --enable-zlib
libavutil 55. 75.100 / 55. 75.100
libavcodec 57.106.101 / 57.106.101
libavformat 57. 82.100 / 57. 82.100
libavdevice 57. 8.101 / 57. 8.101
libavfilter 6.105.100 / 6.105.100
libswscale 4. 7.103 / 4. 7.103
libswresample 2. 8.100 / 2. 8.100
libpostproc 54. 6.100 / 54. 6.100
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
[NULL @ 00000000006552e0] Opening 'movie.mp4' for reading
[file @ 000000000078ee60] Setting default whitelist 'file,crypto'
[mov,mp4,m4a,3gp,3g2,mj2 @ 00000000006552e0] Format mov,mp4,m4a,3gp,3g2,mj2 probed with size=2048 and score=100
[mov,mp4,m4a,3gp,3g2,mj2 @ 00000000006552e0] ISO: File Type Major Brand: isom
[mov,mp4,m4a,3gp,3g2,mj2 @ 00000000006552e0] Unknown dref type 0x206c7275 size 12
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
[mov,mp4,m4a,3gp,3g2,mj2 @ 00000000006552e0] Unknown dref type 0x206c7275 size 12
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
[mov,mp4,m4a,3gp,3g2,mj2 @ 00000000006552e0] Unknown dref type 0x206c7275 size 12
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
[mov,mp4,m4a,3gp,3g2,mj2 @ 00000000006552e0] Unknown dref type 0x206c7275 size 12
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
[mov,mp4,m4a,3gp,3g2,mj2 @ 00000000006552e0] Before avformat_find_stream_info() pos: 3020246318 bytes read:2364477 seeks:1 nb_streams:4
[h264 @ 0000000000666fe0] nal_unit_type: 7, nal_ref_idc: 3
[h264 @ 0000000000666fe0] nal_unit_type: 8, nal_ref_idc: 3
[h264 @ 0000000000666fe0] nal_unit_type: 6, nal_ref_idc: 0
[h264 @ 0000000000666fe0] nal_unit_type: 5, nal_ref_idc: 3
[h264 @ 0000000000666fe0] user data:"x264 - core 114 r1913 5fd3dce - H.264/MPEG-4 AVC codec - Copyleft 2003-2011 - http://www.videolan.org/x264.html - options: cabac=1 ref=5 deblock=1:0:0 analyse=0x3:0x113 me=umh subme=8 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=3 sliced_threads=0 nr=0 decimate=1 interlaced=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=2 b_bias=0 direct=3 weightb=1 open_gop=0 weightp=2 keyint=60 keyint_min=25 scenecut=40 intra_refresh=0 rc_lookahead=50 rc=abr mbtree=1 bitrate=8000 ratetol=1.0 qcomp=0.60 qpmin=10 qpmax=51 qpstep=4 ip_ratio=1.41 aq=1:1.00"
[h264 @ 0000000000666fe0] Reinit context to 1920x1088, pix_fmt: yuv420p
nan : 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
[h264 @ 0000000000666fe0] no picture
[aac @ 0000000000656ae0] skip whole frame, skip left: 0
[mov,mp4,m4a,3gp,3g2,mj2 @ 00000000006552e0] All info found
[mov,mp4,m4a,3gp,3g2,mj2 @ 00000000006552e0] After avformat_find_stream_info() pos: 3091136 bytes read:3130450 seeks:2 frames:16
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'movie.mp4':
Metadata:
major_brand : isom
minor_version : 512
compatible_brands: isomiso2avc1mp41
creation_time : 1970-01-01T00:00:00.000000Z
encoder : Lavf52.102.0
Duration: 00:47:36.58, start: 0.000000, bitrate: 8458 kb/s
Stream #0:0(eng), 15, 1/30000: Video: h264 (High) (avc1 / 0x31637661), yuv420p, 1920x1080 [SAR 1:1 DAR 16:9], 8009 kb/s, 29.97 fps, 29.97 tbr, 30k tbn, 59.94 tbc (default)
Metadata:
creation_time : 1970-01-01T00:00:00.000000Z
handler_name : VideoHandler
Stream #0:1(eng), 1, 1/48000: Audio: aac (LC) (mp4a / 0x6134706D), 48000 Hz, stereo, fltp, 107 kb/s (default)
Metadata:
creation_time : 1970-01-01T00:00:00.000000Z
handler_name : SoundHandler
Stream #0:2(und), 0, 1/90000: Data: none (rtp / 0x20707472), 326 kb/s (default)
Metadata:
creation_time : 2011-05-10T06:06:04.000000Z
handler_name : GPAC ISO Hint Handler
Stream #0:3(und), 0, 1/48000: Data: none (rtp / 0x20707472), 8 kb/s (default)
Metadata:
creation_time : 2011-05-10T06:07:22.000000Z
handler_name : GPAC ISO Hint Handler
detected 8 logical cores
[ffplay_abuffer @ 0000000003dcbec0] Setting 'sample_rate' to value '48000'
[ffplay_abuffer @ 0000000003dcbec0] Setting 'sample_fmt' to value 'fltp'
[ffplay_abuffer @ 0000000003dcbec0] Setting 'channels' to value '2'
[ffplay_abuffer @ 0000000003dcbec0] Setting 'time_base' to value '1/48000'
[ffplay_abuffer @ 0000000003dcbec0] Setting 'channel_layout' to value '0x3'
[ffplay_abuffer @ 0000000003dcbec0] tb:1/48000 samplefmt:fltp samplerate:48000 chlayout:0x3
[ffplay_abuffersink @ 0000000003dcaaa0] auto-inserting filter 'auto_resampler_0' between the filter 'ffplay_abuffer' and the filter 'ffplay_abuffersink'
[AVFilterGraph @ 000000000073d640] query_formats: 2 queried, 0 merged, 3 already done, 0 delayed
[auto_resampler_0 @ 0000000003dcaca0] [SWR @ 00000000030e2580] Using fltp internally between filters
[auto_resampler_0 @ 0000000003dcaca0] ch:2 chl:stereo fmt:fltp r:48000Hz -> ch:2 chl:stereo fmt:s16 r:48000Hz
[h264 @ 0000000000738ee0] nal_unit_type: 7, nal_ref_idc: 3
[h264 @ 0000000000738ee0] nal_unit_type: 8, nal_ref_idc: 3
[aac @ 0000000003a6a0a0] skip whole frame, skip left: 0
Audio frame changed from rate:48000 ch:2 fmt:fltp layout:stereo serial:-1 to rate:48000 ch:2 fmt:fltp layout:stereo serial:1
[h264 @ 0000000000738ee0] nal_unit_type: 6, nal_ref_idc: 0
[h264 @ 0000000000738ee0] nal_unit_type: 5, nal_ref_idc: 3
[h264 @ 0000000000738ee0] user data:"x264 - core 114 r1913 5fd3dce - H.264/MPEG-4 AVC codec - Copyleft 2003-2011 - http://www.videolan.org/x264.html - options: cabac=1 ref=5 deblock=1:0:0 analyse=0x3:0x113 me=umh subme=8 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=3 sliced_threads=0 nr=0 decimate=1 interlaced=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=2 b_bias=0 direct=3 weightb=1 open_gop=0 weightp=2 keyint=60 keyint_min=25 scenecut=40 intra_refresh=0 rc_lookahead=50 rc=abr mbtree=1 bitrate=8000 ratetol=1.0 qcomp=0.60 qpmin=10 qpmax=51 qpstep=4 ip_ratio=1.41 aq=1:1.00"
[h264 @ 0000000000738ee0] Reinit context to 1920x1088, pix_fmt: yuv420p
nan A-V: nan fd= 0 aq= 9KB vq= 1158KB sq= 0B f=0/0
[h264 @ 0000000000738ee0] no picture
[h264 @ 00000000007393c0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 00000000007393c0] no picture
[h264 @ 0000000000736d40] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000737ba0] nal_unit_type: 1, nal_ref_idc: 0
[h264 @ 00000000007376e0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000739880] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000738a20] nal_unit_type: 1, nal_ref_idc: 0
[h264 @ 0000000000739d60] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000738540] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000738ee0] nal_unit_type: 1, nal_ref_idc: 2
Video frame changed from size:0x0 format:none serial:-1 to size:1920x1080 format:yuv420p serial:1
[h264 @ 00000000007393c0] nal_unit_type: 1, nal_ref_idc: 2
[ffplay_buffer @ 0000000003107200] Setting 'video_size' to value '1920x1080'
[ffplay_buffer @ 0000000003107200] Setting 'pix_fmt' to value '0'
[ffplay_buffer @ 0000000003107200] Setting 'time_base' to value '1/30000'
[ffplay_buffer @ 0000000003107200] Setting 'pixel_aspect' to value '1/1'
[ffplay_buffer @ 0000000003107200] Setting 'frame_rate' to value '30000/1001'
[ffplay_buffer @ 0000000003107200] w:1920 h:1080 pixfmt:yuv420p tb:1/30000 fr:30000/1001 sar:1/1 sws_param:
[Parsed_stereo3d_0 @ 00000000047eeee0] Setting 'in' to value 'sbs2l'
[Parsed_stereo3d_0 @ 00000000047eeee0] Setting 'out' to value 'argg'
[auto_scaler_0 @ 00000000030dc500] Setting 'flags' to value 'bicubic'
[auto_scaler_0 @ 00000000030dc500] w:iw h:ih flags:'bicubic' interl:0
[Parsed_stereo3d_0 @ 00000000047eeee0] auto-inserting filter 'auto_scaler_0' between the filter 'ffplay_buffer' and the filter 'Parsed_stereo3d_0'
[ffplay_abuffer @ 0000000004254980] Setting 'sample_rate' to value '48000'
[ffplay_abuffer @ 0000000004254980] Setting 'sample_fmt' to value 'fltp'
[ffplay_abuffer @ 0000000004254980] Setting 'channels' to value '2'
[ffplay_abuffer @ 0000000004254980] Setting 'time_base' to value '1/48000'
[ffplay_abuffer @ 0000000004254980] Setting 'channel_layout' to value '0x3'
[ffplay_abuffer @ 0000000004254980] tb:1/48000 samplefmt:fltp samplerate:48000 chlayout:0x3
[ffplay_abuffersink @ 0000000004254be0] auto-inserting filter 'auto_resampler_0' between the filter 'ffplay_abuffer' and the filter 'ffplay_abuffersink'
[AVFilterGraph @ 000000000799d880] query_formats: 3 queried, 1 merged, 1 already done, 0 delayed
[AVFilterGraph @ 000000000073d640] query_formats: 2 queried, 0 merged, 3 already done, 0 delayed
[auto_scaler_0 @ 00000000030dc500] picking rgb24 out of 2 ref:yuv420p alpha:0
[auto_resampler_0 @ 0000000004254a40] [SWR @ 000000000425b720] Using fltp internally between filters
[auto_resampler_0 @ 0000000004254a40] ch:2 chl:stereo fmt:fltp r:48000Hz -> ch:2 chl:stereo fmt:s16 r:48000Hz
nan A-V: nan fd= 0 aq= 17KB vq= 1986KB sq= 0B f=0/0
[auto_scaler_0 @ 00000000030dc500] w:1920 h:1080 fmt:yuv420p sar:1/1 -> w:1920 h:1080 fmt:rgb24 sar:1/1 flags:0x4
[h264 @ 0000000000736d40] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000737ba0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 00000000007376e0] nal_unit_type: 1, nal_ref_idc: 2
Initialized opengl renderer.
Created 960x1080 texture with SDL_PIXELFORMAT_RGB24.
0.87 A-V: -0.113 fd= 0 aq= 19KB vq= 2267KB sq= 0B f=0/0
[h264 @ 0000000000739880] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000738a20] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000739d60] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000738540] nal_unit_type: 1, nal_ref_idc: 0
[h264 @ 0000000000738ee0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 00000000007393c0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000736d40] nal_unit_type: 1, nal_ref_idc: 0
[h264 @ 0000000000737ba0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 00000000007376e0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000739880] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000738a20] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000739d60] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000738540] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000738ee0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 00000000007393c0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000736d40] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000737ba0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 00000000007376e0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000739880] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000738a20] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000739d60] nal_unit_type: 1, nal_ref_idc: 2
0.92 A-V: 0.767 fd= 19 aq= 19KB vq= 849KB sq= 0B f=0/0
[h264 @ 0000000000738540] nal_unit_type: 1, nal_ref_idc: 0
[h264 @ 0000000000738ee0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 00000000007393c0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000736d40] nal_unit_type: 1, nal_ref_idc: 0
[h264 @ 0000000000737ba0] nal_unit_type: 1, nal_ref_idc: 2
0.98 A-V: 0.778 fd= 24 aq= 19KB vq= 583KB sq= 0B f=0/0
[h264 @ 00000000007376e0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000739880] nal_unit_type: 1, nal_ref_idc: 0
[h264 @ 0000000000738a20] nal_unit_type: 1, nal_ref_idc: 2
1.01 A-V: -0.044 fd= 26 aq= 23KB vq= 549KB sq= 0B f=0/0
[h264 @ 0000000000739d60] nal_unit_type: 1, nal_ref_idc: 2
1.05 A-V: -0.036 fd= 26 aq= 22KB vq= 544KB sq= 0B f=0/0
[h264 @ 0000000000738540] nal_unit_type: 1, nal_ref_idc: 0
1.08 A-V: -0.037 fd= 26 aq= 22KB vq= 541KB sq= 0B f=0/0
1.11 A-V: -0.045 fd= 26 aq= 21KB vq= 541KB sq= 0B f=0/0
[h264 @ 0000000000738ee0] nal_unit_type: 1, nal_ref_idc: 2
1.15 A-V: -0.008 fd= 26 aq= 20KB vq= 517KB sq= 0B f=0/0
[h264 @ 00000000007393c0] nal_unit_type: 1, nal_ref_idc: 2
1.18 A-V: -0.007 fd= 26 aq= 19KB vq= 512KB sq= 0B f=0/0
[h264 @ 0000000000736d40] nal_unit_type: 1, nal_ref_idc: 0
1.22 A-V: -0.004 fd= 26 aq= 18KB vq= 508KB sq= 0B f=0/0
[h264 @ 0000000000737ba0] nal_unit_type: 1, nal_ref_idc: 2
1.26 A-V: -0.005 fd= 26 aq= 19KB vq= 514KB sq= 0B f=0/0
[h264 @ 00000000007376e0] nal_unit_type: 1, nal_ref_idc: 2
1.28 A-V: -0.011 fd= 26 aq= 19KB vq= 505KB sq= 0B f=0/0
[h264 @ 0000000000739880] nal_unit_type: 1, nal_ref_idc: 0
1.32 A-V: -0.009 fd= 26 aq= 19KB vq= 496KB sq= 0B f=0/0
[h264 @ 0000000000738a20] nal_unit_type: 1, nal_ref_idc: 2
1.35 A-V: -0.006 fd= 26 aq= 19KB vq= 455KB sq= 0B f=0/0
[h264 @ 0000000000739d60] nal_unit_type: 1, nal_ref_idc: 2
1.38 A-V: -0.005 fd= 26 aq= 26KB vq= 451KB sq= 0B f=0/0
[h264 @ 0000000000738540] nal_unit_type: 1, nal_ref_idc: 0
1.41 A-V: -0.014 fd= 26 aq= 25KB vq= 448KB sq= 0B f=0/0
[h264 @ 0000000000738ee0] nal_unit_type: 1, nal_ref_idc: 2
1.45 A-V: -0.010 fd= 26 aq= 24KB vq= 430KB sq= 0B f=0/0
[h264 @ 00000000007393c0] nal_unit_type: 1, nal_ref_idc: 2
1.48 A-V: -0.009 fd= 26 aq= 23KB vq= 427KB sq= 0B f=0/0
[h264 @ 0000000000736d40] nal_unit_type: 1, nal_ref_idc: 0
1.52 A-V: 0.001 fd= 26 aq= 22KB vq= 424KB sq= 0B f=0/0
[h264 @ 0000000000737ba0] nal_unit_type: 1, nal_ref_idc: 2
1.56 A-V: -0.007 fd= 26 aq= 22KB vq= 412KB sq= 0B f=0/0
[h264 @ 00000000007376e0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000739880] nal_unit_type: 1, nal_ref_idc: 0
1.62 A-V: -0.009 fd= 26 aq= 21KB vq= 405KB sq= 0B f=0/0
[h264 @ 0000000000738a20] nal_unit_type: 5, nal_ref_idc: 3
1.66 A-V: -0.008 fd= 26 aq= 20KB vq= 344KB sq= 0B f=0/0
[h264 @ 0000000000739d60] nal_unit_type: 1, nal_ref_idc: 2
1.69 A-V: -0.006 fd= 26 aq= 19KB vq= 326KB sq= 0B f=0/0
[h264 @ 0000000000738540] nal_unit_type: 1, nal_ref_idc: 0
1.73 A-V: -0.006 fd= 26 aq= 19KB vq= 324KB sq= 0B f=0/0
[h264 @ 0000000000738ee0] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 00000000007393c0] nal_unit_type: 1, nal_ref_idc: 2
1.80 A-V: -0.006 fd= 26 aq= 19KB vq= 312KB sq= 0B f=0/0
[h264 @ 0000000000736d40] nal_unit_type: 1, nal_ref_idc: 0
1.84 A-V: 0.016 fd= 26 aq= 28KB vq= 310KB sq= 0B f=0/0
[h264 @ 0000000000737ba0] nal_unit_type: 1, nal_ref_idc: 2
1.88 A-V: 0.020 fd= 26 aq= 27KB vq= 302KB sq= 0B f=0/0
[h264 @ 00000000007376e0] nal_unit_type: 1, nal_ref_idc: 2
1.91 A-V: 0.016 fd= 26 aq= 26KB vq= 300KB sq= 0B f=0/0
[h264 @ 0000000000739880] nal_unit_type: 1, nal_ref_idc: 0
1.94 A-V: 0.020 fd= 26 aq= 25KB vq= 298KB sq= 0B f=0/0
[h264 @ 0000000000738a20] nal_unit_type: 1, nal_ref_idc: 2
[h264 @ 0000000000739d60] nal_unit_type: 1, nal_ref_idc: 2
1.99 A-V: 0.001 fd= 27 aq= 24KB vq= 289KB sq= 0B f=0/0
[h264 @ 0000000000738540] nal_unit_type: 1, nal_ref_idc: 0
2.03 A-V: 0.001 fd= 27 aq= 24KB vq= 288KB sq= 0B f=0/0
[h264 @ 0000000000738ee0] nal_unit_type: 1, nal_ref_idc: 2
2.06 A-V: -0.003 fd= 27 aq= 23KB vq= 279KB sq= 0B f=0/0
[AVIOContext @ 000000000065e160] Statistics: 5802068 bytes read, 5 seeks
The option setsar=2:1 is a workaround.
Change History (5)
comment:1 by , 9 years ago
| Component: | ffplay → undetermined |
|---|---|
| Keywords: | stereo3d added |
follow-up: 3 comment:2 by , 9 years ago
No sample file is needed. It is clear that the displayed resolution with sbsl and sbs2l should not be the same for any file.
If you download the first sample from http://www.3d-bee.com/2d-3d-converted-videos/ this command runs as expected:
ffplay -vf "stereo3d=sbsl:argg" conversion3d-bee-diamond-gaming.mp4
Since the side-by-side sample video uses half the horizontal resolution, the command above produces horizontally compressed output. The following command is expected to fix this:
ffplay -vf "stereo3d=sbs2l:argg" conversion3d-bee-diamond-gaming.mp4
but doesn't. The following command is a workaround:
ffplay -vf "stereo3d=sbsl:argg, setsar=2:1" conversion3d-bee-diamond-gaming.mp4
comment:4 by , 9 years ago
| Component: | undetermined → avfilter |
|---|---|
| Reproduced by developer: | set |
| Status: | new → open |
If there is an issue, it is also reproducible with the following command line:
$ ffmpeg -i conversion3d-bee-diamond-gaming.mp4 -vf stereo3d=sbs2l:argg -qscale 2 -f m4v out.m4v
ffmpeg version N-87326-g3ffd3b7 Copyright (c) 2000-2017 the FFmpeg developers
built with gcc 6.3.0 (GCC)
configuration: --enable-gpl
libavutil 55. 75.100 / 55. 75.100
libavcodec 57.106.101 / 57.106.101
libavformat 57. 82.100 / 57. 82.100
libavdevice 57. 8.101 / 57. 8.101
libavfilter 6.105.100 / 6.105.100
libswscale 4. 7.103 / 4. 7.103
libswresample 2. 8.100 / 2. 8.100
libpostproc 54. 6.100 / 54. 6.100
[h264 @ 0x2a6db80] A non-intra slice in an IDR NAL unit.
[h264 @ 0x2a6db80] decode_slice_header error
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'conversion3d-bee-diamond-gaming.mp4':
Metadata:
major_brand : isom
minor_version : 0
compatible_brands: mp41avc1qt
creation_time : 2013-01-23T20:29:25.000000Z
encoder : vlc 2.0.5 stream output
encoder-eng : vlc 2.0.5 stream output
Duration: 00:00:50.45, start: 0.000000, bitrate: 3956 kb/s
Stream #0:0(eng): Audio: mp3 (mp4a / 0x6134706D), 44100 Hz, stereo, s16p, 127 kb/s (default)
Metadata:
creation_time : 2013-01-23T20:29:25.000000Z
handler_name : SoundHandler
Stream #0:1(eng): Video: h264 (High) (avc1 / 0x31637661), yuv420p, 1920x1080 [SAR 1:1 DAR 16:9], 3817 kb/s, 29.97 fps, 29.97 tbr, 1001 tbn, 59.94 tbc (default)
Metadata:
creation_time : 2013-01-23T20:29:25.000000Z
handler_name : VideoHandler
Please use -q:a or -q:v, -qscale is ambiguous
Stream mapping:
Stream #0:1 -> #0:0 (h264 (native) -> mpeg4 (native))
Press [q] to stop, [?] for help
[h264 @ 0x2a9fec0] A non-intra slice in an IDR NAL unit.
[h264 @ 0x2a9fec0] decode_slice_header error
Output #0, m4v, to 'out.m4v':
Metadata:
major_brand : isom
minor_version : 0
compatible_brands: mp41avc1qt
encoder : Lavf57.82.100
Stream #0:0(eng): Video: mpeg4, yuv420p, 960x1080 [SAR 2:1 DAR 16:9], q=2-31, 200 kb/s, 29.97 fps, 29.97 tbn, 29.97 tbc (default)
Metadata:
creation_time : 2013-01-23T20:29:25.000000Z
handler_name : VideoHandler
encoder : Lavc57.106.101 mpeg4
Side data:
cpb: bitrate max/min/avg: 0/0/200000 buffer size: 0 vbv_delay: -1
frame= 1514 fps=116 q=2.0 Lsize= 48447kB time=00:00:50.51 bitrate=7856.2kbits/s dup=2 drop=1 speed=3.87x
video:48447kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.000000%
$ ffmpeg -i out.m4v
ffmpeg version N-87326-g3ffd3b7 Copyright (c) 2000-2017 the FFmpeg developers
built with gcc 6.3.0 (GCC)
configuration: --enable-gpl --cc=/usr/local/gcc-6.3.0/bin/gcc
libavutil 55. 75.100 / 55. 75.100
libavcodec 57.106.101 / 57.106.101
libavformat 57. 82.100 / 57. 82.100
libavdevice 57. 8.101 / 57. 8.101
libavfilter 6.105.100 / 6.105.100
libswscale 4. 7.103 / 4. 7.103
libswresample 2. 8.100 / 2. 8.100
libpostproc 54. 6.100 / 54. 6.100
Input #0, m4v, from 'out.m4v':
Duration: N/A, start: 0.000000, bitrate: N/A
Stream #0:0: Video: mpeg4 (Simple Profile), yuv420p, 960x1080 [SAR 1:1 DAR 8:9], 29.97 fps, 29.97 tbr, 1200k tbn, 30k tbc
At least one output file must be specified
I wonder if the aspect ratio in the input file is correct though...
Patch sent.
comment:5 by , 9 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Fixed in b4b02477bd8029daca389ec745bbb46457b74b5c, thank you for the useful report!



For some input files, the behaviour of
ffmpegandffplayis identical: Please consider providing a real-world (3d) input file to allow to better understand the issue.