lavfi/stereo3d: Set SAR for every output frame.

Fixes ticket #6672.